{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 73,
  "lineage": "d5470f84-734c-cf3b-3fc8-7748241d338b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:365845911653:vpc/vpc-0c1a222147ec689b2",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f85466bc27db0a1f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e2ca5c46cadbab35",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c1a222147ec689b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0812191302e295c07",
            "owner_id": "365845911653"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032eae14ebea64f91",
            "arn": "arn:aws:ec2:us-east-2:365845911653:instance/i-01978fc7048927f93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01978fc7048927f93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2e5dea2fbf5fb20",
            "private_dns": "ip-172-31-21-49.us-east-2.compute.internal",
            "private_ip": "172.31.21.49",
            "public_dns": "ec2-18-116-26-150.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.26.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0afcb60b6556f47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ubuntu-test-instance-lL2JZc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ff31467971e7ed3",
            "tags": {
              "Name": "t2.micro"
            },
            "tags_all": {
              "Name": "t2.micro"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-070ca5ec67e1d418d"
            ]
          },
          "dependencies": [
            "aws_security_group.ubuntu_instance",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ubuntu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:365845911653:security-group/sg-070ca5ec67e1d418d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-070ca5ec67e1d418d",
            "ingress": [],
            "name": "ubuntu-test-instance-lL2JZc",
            "name_prefix": "",
            "owner_id": "365845911653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c1a222147ec689b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2098057312",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-070ca5ec67e1d418d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ubuntu_instance",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3389,
            "id": "sgrule-1196235642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-070ca5ec67e1d418d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ubuntu_instance",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}